--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,6 +6,7 @@ $teal:#114b5f;
 $lagoon:#028090;
 $peppermint:#e4fde1;
 $wedgewood:#456990;
+$mutedwhite:#cccccc;
 
 
 
@@ -20,6 +21,104 @@ html{
 
 body{
 	font-size: 1.2rem;
-	font-family: $headingFont;
-	background:yellow;
+	font-family: $mainFont;
+	
+}
+
+.hero {
+	
+	display:flex;
+	flex-direction:row;
+	background-image: url('../asset/hero.jpg');
+	background-size: cover;
+	
+
+
+
+}
+
+	
+.clock {
+	display:flex;
+	flex-direction:row;
+	justify-content:center;
+	align-items:center;
+}
+
+nav {
+	background:$teal;
+	display:flex;
+	flex-direction:row;
+	justify-content:space-between;
+	align-items:center;
+	padding: 10px 40px;
+	img {
+		width: 200px;
+	}
+	button {
+		background:$teal;
+		border:none;
+		color:$mutedwhite;
+		text-transform: uppercase;
+		font-size: 1.4rem;
+		font-family: $mainFont;
+		&:hover {
+			font-weight: bolder;
+		}
+	}
+
+}
+
+
+h1 {
+	margin:0;
+	padding:30px;
+	color:$mutedwhite;
+	font-size: 2rem;
+
+}
+
+.buttons {
+	padding:100px;
+	
+
+}
+
+details{
+	color:$mutedwhite;
+
+}
+
+
+
+summary {
+	padding:15px;
+	border:2px solid $mutedwhite;
+	font-size: 1.5rem;
+	margin:10px 0;
+
+	p{
+		display:inline-block;
+		margin:0;
+	}
+	img {
+		width:25px;
+		float:right;
+	}
+}
+
+
+summary::-webkit-details-marker {
+		display:none;
+	}
+
+ul.allergies, ul.diet {
+	display:flex;
+	justify-content:flex-start;
+
+}
+
+ul.allergies li, ul.diet li {
+	list-style: none;
+	margin-right: 15px;
 }
