--- a/styles/main.scss
+++ b/styles/main.scss
@@ -24,6 +24,11 @@ body{
 	font-family: $mainFont;
 	
 }
+img{
+	width:100%;
+}
+
+
 
 .hero {
 	
@@ -122,3 +127,77 @@ ul.allergies li, ul.diet li {
 	list-style: none;
 	margin-right: 15px;
 }
+
+
+// RECIPE STYLES
+.wrapper{
+	width:100%;
+	max-width:1280px;
+	margin:0 auto;
+}
+main{
+	width:100%;
+}
+#recipes{
+	display: flex;
+	flex-wrap:wrap;
+	.oneRecipe{
+		width: 33.33%;
+		.static{
+			position:relative;
+			.recipe__title{
+				position: absolute;
+				top: 0;
+				bottom: 0;
+				left: 0;
+				right: 0;
+				padding-top: 230px;
+				overflow: hidden;
+				transition:all .3s;
+				background:rgba(255,255,255,0);
+				&:hover{
+					background:rgba(255,255,255,0.5);
+					padding-top: 200px;
+					
+				}
+				h2,p{
+					padding-left: 20px;
+				}
+			}
+		}
+		.details{
+			opacity:0.2;
+		}			
+	}
+}
+
+	
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
