--- a/styles/main.scss
+++ b/styles/main.scss
@@ -224,39 +224,75 @@ main{
 	display: flex;
 	flex-wrap:wrap;
 	.oneRecipe{
-		width: 33.33%;
+		position:relative;
+		width: 33%;
+		height:300px;
+		transition: all 1s;
+   		perspective:1500px;
+   		
+		&:hover{
+			transform: rotateY(180deg);
+		}
 		.static{
-			position:relative;
+			position:absolute;
+			width:100%;
+			height:100%;
+			transition:all 1s;
+			backface-visibility:hidden; 
+			color:red;
+			z-index:2;
+			
+
+
 			.recipe__title{
 				position: absolute;
-				top: 0;
 				bottom: 0;
 				left: 0;
 				right: 0;
-				padding-top: 230px;
-				overflow: hidden;
-				transition:all .3s;
+				// padding-top: 100px;
+				// overflow: hidden;
 				background:rgba(255,255,255,0);
-				&:hover{
-					background:rgba(255,255,255,0.5);
-					padding-top: 200px;
+				// &:hover{
+				// 	background:rgba(255,255,255,0.5);
+				// 	padding-top: 200px;
 					
-				}
+				
 				h2,p{
 					padding-left: 20px;
 				}
 			}
 		}
 		.details{
-			opacity:0.2;
+
+			color:red;
+			// opacity:;
+			position:absolute;
+			width:100%;
+			height:100%;
+			transition:all 1s;
+			// backface-visibility:hidden;
+			
+			 -webkit-transform:rotateY(180deg);
+			 
+			
 		}			
 	}
 }
 
 	
+.oneRecipe:hover .static {
+	-webkit-transform:rotateY(-180deg);
 
 
 
+
+}
+
+.oneRecipe:hover .details {
+	-webkit-transform:rotateY(0);
+	
+	
+}
 
 
 
