--- a/styles/style.css
+++ b/styles/style.css
@@ -558,7 +558,6 @@ ul.allergies, ul.diet {
 
 ul.allergies li, ul.diet li {
   list-style: none;
-
   margin: 0px auto;
   float: left; }
 
@@ -612,8 +611,6 @@ input[type="checkbox"]:checked + label {
   .buttons {
     padding: 50px 30px; } }
 
-/*  margin-right: 15px; }*/
-
 .wrapper {
   width: 100%;
   max-width: 1280px;
@@ -630,23 +627,42 @@ main {
       -ms-flex-wrap: wrap;
           flex-wrap: wrap; }
   #recipes .oneRecipe {
-    width: 33.33%; }
+    position: relative;
+    width: 33%;
+    height: 300px;
+    transition: all 1s;
+    -webkit-perspective: 1500px;
+            perspective: 1500px; }
+    #recipes .oneRecipe:hover {
+      -webkit-transform: rotateY(180deg);
+              transform: rotateY(180deg); }
     #recipes .oneRecipe .static {
-      position: relative; }
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      transition: all 1s;
+      -webkit-backface-visibility: hidden;
+              backface-visibility: hidden;
+      color: red;
+      z-index: 2; }
       #recipes .oneRecipe .static .recipe__title {
         position: absolute;
-        top: 0;
         bottom: 0;
         left: 0;
         right: 0;
-        padding-top: 230px;
-        overflow: hidden;
-        transition: all .3s;
         background: rgba(255, 255, 255, 0); }
-        #recipes .oneRecipe .static .recipe__title:hover {
-          background: rgba(255, 255, 255, 0.5);
-          padding-top: 200px; }
         #recipes .oneRecipe .static .recipe__title h2, #recipes .oneRecipe .static .recipe__title p {
           padding-left: 20px; }
     #recipes .oneRecipe .details {
-      opacity: 0.2; }
+      color: red;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      transition: all 1s;
+      -webkit-transform: rotateY(180deg); }
+
+.oneRecipe:hover .static {
+  -webkit-transform: rotateY(-180deg); }
+
+.oneRecipe:hover .details {
+  -webkit-transform: rotateY(0); }
