--- a/styles/main.scss
+++ b/styles/main.scss
@@ -225,75 +225,70 @@ main{
 	flex-wrap:wrap;
 	.oneRecipe{
 		position:relative;
-		width: 33%;
-		height:300px;
-		transition: all 1s;
-   		perspective:1500px;
-   		
-		&:hover{
+		width: 33.33%;
+   	perspective:1000;  		
+		&:hover .flipper,
+		.hover .flipper{
 			transform: rotateY(180deg);
 		}
+		.flipper {
+			transition: 0.6s;
+			transform-style: preserve-3d;
+			position: relative;
+		}
+		.static, 
+		.details {
+			backface-visibility: hidden;
+		}
 		.static{
-			position:absolute;
 			width:100%;
-			height:100%;
-			transition:all 1s;
-			backface-visibility:hidden; 
-			color:red;
-			z-index:2;
-			
-
-
+			//animation
+			z-index:2;	
+			transform: rotateY(0deg);	
 			.recipe__title{
+				padding-top: 20px;
+				color:$mutedwhite;
+				width: 100%;
 				position: absolute;
+				// top: 150px;
 				bottom: 0;
-				left: 0;
-				right: 0;
-				// padding-top: 100px;
-				// overflow: hidden;
-				background:rgba(255,255,255,0);
-				// &:hover{
-				// 	background:rgba(255,255,255,0.5);
-				// 	padding-top: 200px;
-					
-				
+				background:linear-gradient(to top, rgba(0,0,0,0.7), rgba(255,255,255,0));
 				h2,p{
 					padding-left: 20px;
+					margin: 0;
+				}
+				h2{
+					margin-bottom: 10px;
 				}
 			}
 		}
 		.details{
-
-			color:red;
-			// opacity:;
+			padding: 20px 20px;
 			position:absolute;
+			top:20px;
 			width:100%;
-			height:100%;
-			transition:all 1s;
-			// backface-visibility:hidden;
-			
-			 -webkit-transform:rotateY(180deg);
-			 
-			
-		}			
+			transform: rotateY(180deg);
+		}	
+		a{
+			text-decoration: none;
+			color:$lagoon;
+			&:hover{
+				color:$wedgewood;
+			}
+		}
+		ul{
+			margin:0;
+			padding: 0;
+			padding-bottom: 20px;
+		}
+		li{
+			list-style: none;
+			background:$teal;
+			color:$mutedwhite;
+			margin:1px;
+		}
 	}
 }
-
-	
-.oneRecipe:hover .static {
-	-webkit-transform:rotateY(-180deg);
-
-
-
-
-}
-
-.oneRecipe:hover .details {
-	-webkit-transform:rotateY(0);
-	
-	
-}
-
 
 
 
