--- a/styles/main.scss
+++ b/styles/main.scss
@@ -24,6 +24,8 @@ body{
 	font-family: $mainFont;
 }
 
+
+
 //  --------------------------------About overlay
 #about {
 	display: none;
@@ -299,7 +301,7 @@ input[type="checkbox"]:checked + label {
 // }
 
 
-// RECIPE STYLES
+// --------RECIPE STYLES
 .wrapper{
 	width:100%;
 	max-width:1280px;
@@ -309,12 +311,13 @@ input[type="checkbox"]:checked + label {
 main{
 	width:100%;
 
-
-
 }
 #recipes{
 	display: flex;
 	flex-wrap:wrap;
+	img{
+		width:100%;
+	}
 	.oneRecipe{
 		position:relative;
 		width: 33.33%;
@@ -324,7 +327,7 @@ main{
 			transform: rotateY(180deg);
 		}
 		.flipper {
-			transition: 0.6s;
+			transition: 1.2s;
 			transform-style: preserve-3d;
 			position: relative;
 		}
@@ -355,12 +358,16 @@ main{
 			}
 		}
 		.details{
-			padding: 20px 20px;
+			padding: 0 20px 0;
 			position:absolute;
 			top:20px;
 			width:100%;
 			transform: rotateY(180deg);
-		}	
+			h2{
+				font-family: $headingFont;
+				color:$teal;
+			}
+			}	
 		a{
 			text-decoration: none;
 			color:$lagoon;
