--- a/styles/main.scss
+++ b/styles/main.scss
@@ -321,11 +321,18 @@ main{
 	.oneRecipe{
 		position:relative;
 		width: 33.33%;
-   	perspective:1000;  		
+   		perspective:1000; 
+   		@media screen and (max-width: 790px) {
+   		  	width:50%;
+		}
+		@media screen and (max-width: 450px) {
+   		  	width:100%;
+		}  		
 		&:hover .flipper,
 		.hover .flipper{
 			transform: rotateY(180deg);
 		}
+	
 		.flipper {
 			transition: 1.2s;
 			transform-style: preserve-3d;
@@ -345,7 +352,6 @@ main{
 				color:$mutedwhite;
 				width: 100%;
 				position: absolute;
-				// top: 150px;
 				bottom: 0;
 				background:linear-gradient(to top, rgba(0,0,0,0.7), rgba(255,255,255,0));
 				h2,p{
@@ -358,27 +364,31 @@ main{
 			}
 		}
 		.details{
-			padding: 0 20px 0;
+			padding: 20px 0 30px;
 			position:absolute;
-			top:20px;
+			top: 0;
 			width:100%;
+			height:100%;
 			transform: rotateY(180deg);
+			overflow:scroll;
 			h2{
 				font-family: $headingFont;
 				color:$teal;
 			}
-			}	
+		}	
 		a{
 			text-decoration: none;
 			color:$lagoon;
+			padding-left: 20px;
 			&:hover{
 				color:$wedgewood;
 			}
 		}
 		ul{
 			margin:0;
-			padding: 0;
+			padding: 0 20px 20px;
 			padding-bottom: 20px;
+			padding-left: 20px;
 		}
 		li{
 			list-style: none;
