--- a/styles/style.css
+++ b/styles/style.css
@@ -732,6 +732,12 @@ main {
     width: 33.33%;
     -webkit-perspective: 1000;
             perspective: 1000; }
+    @media screen and (max-width: 790px) {
+      #recipes .oneRecipe {
+        width: 50%; } }
+    @media screen and (max-width: 450px) {
+      #recipes .oneRecipe {
+        width: 100%; } }
     #recipes .oneRecipe:hover .flipper,
     #recipes .oneRecipe .hover .flipper {
       -webkit-transform: rotateY(180deg);
@@ -763,24 +769,28 @@ main {
         #recipes .oneRecipe .static .recipe__title h2 {
           margin-bottom: 10px; }
     #recipes .oneRecipe .details {
-      padding: 0 20px 0;
+      padding: 20px 0 30px;
       position: absolute;
-      top: 20px;
+      top: 0;
       width: 100%;
+      height: 100%;
       -webkit-transform: rotateY(180deg);
-              transform: rotateY(180deg); }
+              transform: rotateY(180deg);
+      overflow: scroll; }
       #recipes .oneRecipe .details h2 {
         font-family: "Abril Fatface", cursive;
         color: #114b5f; }
     #recipes .oneRecipe a {
       text-decoration: none;
-      color: #028090; }
+      color: #028090;
+      padding-left: 20px; }
       #recipes .oneRecipe a:hover {
         color: #456990; }
     #recipes .oneRecipe ul {
       margin: 0;
-      padding: 0;
-      padding-bottom: 20px; }
+      padding: 0 20px 20px;
+      padding-bottom: 20px;
+      padding-left: 20px; }
     #recipes .oneRecipe li {
       list-style: none;
       background: #114b5f;
