--- a/styles/main.scss
+++ b/styles/main.scss
@@ -22,6 +22,7 @@ html{
 body{
 	font-size: 1.2rem;
 	font-family: $mainFont;
+	background: $teal;
 }
 
 
@@ -125,7 +126,7 @@ img{
 	flex-direction:row;
 	background-image: url('../asset/hero.jpg');
 	background-size: cover;
-	height:100vh;
+	height:calc(100vh - 62px);
 
 }
 
@@ -135,7 +136,7 @@ img{
 	flex-direction:row;
 	justify-content:center;
 	align-items:center;
-	padding:300px 0;
+	padding:200px 0;
 
 }
 
@@ -173,6 +174,7 @@ h1 {
 	color:$mutedwhite;
 	font-size: 2.5rem;
 	font-family: $headingFont;
+
 }
 
 h2 {
@@ -182,9 +184,15 @@ h2 {
 }
 
 .buttons {
-	padding:100px 30px;
+	padding:100px 60px;
 	background-color:rgba(0,0,0,.7);
 
+}
+
+@media (min-width: 1300px) {
+	.buttons {
+		padding:150px 30px;
+	}
 }
 
 details{
@@ -258,7 +266,7 @@ input[type="checkbox"]:checked + label {
 
 
 
-.submit, button.more.open {
+.submit {
 	// display:block;
 	width: 250px;
 	background:$teal;
@@ -274,8 +282,20 @@ input[type="checkbox"]:checked + label {
 	}
 }
 
+
 button.more.open {
 	display:inline-block;
+	width:250px;
+	background:$mutedwhite;
+	color:$teal;
+	margin:20px 0;
+	border:none;
+	font-family: $headingFont;
+	font-size: 2.5rem;
+	transition:background .3s;
+	&:hover {
+		color: $lagoon;
+	}
 
 }
 
@@ -388,15 +408,18 @@ main{
 			overflow:scroll;
 			h2{
 				font-family: $headingFont;
-				color:$teal;
+				color:$mutedwhite;
 			}
 		}	
 		a{
 			text-decoration: none;
-			color:$lagoon;
+			color:$mutedwhite;
 			padding-left: 20px;
+			opacity: .8;
+			background: $lagoon;
+			padding:3px 10px;
 			&:hover{
-				color:$wedgewood;
+				opacity: 1;
 			}
 		}
 		ul{
